# scam-spotter

./: .gitignore  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scam_spotter/: __init__.py  analyzer.py  app.py  calibration.py  classifier.py  cli.py  rules.py
scam_spotter/data/: __init__.py  examples.jsonl
tests/: test_analyzer.py  test_calibration.py  test_rules.py
